--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&family=Jersey+10&family=Paytone+One&display=swap" rel="stylesheet">
@@ -140,7 +140,7 @@
             </div>
         </section>
     </div>
-    <script src="../js/main.js" type="module"></script>
-    <script src="../js/citas.js"></script>
+    <script src="./js/main.js" type="module"></script>
+    <script src="./js/citas.js"></script>
 </body>
 </html>
