--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="header">
             <header class="menu_header">
                 <h3>AluraGeek</h3>
-                <img src="../componentes/corazones.png" alt="">
+                <img src="./componentes/corazones.png" alt="">
             </header>
         </section>
         <section class="titulo">
@@ -32,28 +32,28 @@
                 <div class="lista_articulos">
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/gameboy.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/gameboy.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>GameBoy</h2></li>
                             <li class="precio_articulo"><h2>$3000</h2></li>
                         </ul>
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/gameboyAdvanceSP.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/gameboyAdvanceSP.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>GameBoy AdvanceSP</h2></li>
                             <li class="precio_articulo"><h2>$5000</h2></li>
                         </ul>
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/IntaxHelloKitty.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/IntaxHelloKitty.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>Cámara Instax HelloKitty</h2></li>
                             <li class="precio_articulo"><h2>$3600</h2></li>
                         </ul>
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/psp.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/psp.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>PSP</h2></li>
                             <li class="precio_articulo"><h2>$3000</h2></li>
                         </ul>
@@ -67,28 +67,28 @@
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/SoporteNintendoSwich.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/SoporteNintendoSwich.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>Soporte para NintendoSwich estilo retro</h2></li>
                             <li class="precio_articulo"><h2>$4400</h2></li>
                         </ul>
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/soporteVideojuegosNSwich.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/soporteVideojuegosNSwich.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>Organizador para juegos</h2></li>
                             <li class="precio_articulo"><h2>$800</h2></li>
                         </ul>
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/Nintendo.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/Nintendo.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>Nintendo</h2></li>
                             <li class="precio_articulo"><h2>$3200</h2></li>
                         </ul>
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/Gamecube.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/Gamecube.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>GameCube</h2></li>
                             <li class="precio_articulo"><h2>$4700</h2></li>
                         </ul>
