arregle otras imagenes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="articulo_box">
                         <ul>
-                            <li class="imagen_articulo"><img src="../componentes/bocinaVintage.jpg" alt=""></li>
+                            <li class="imagen_articulo"><img src="./componentes/bocinaVintage.jpg" alt=""></li>
                             <li class="titulo_articulo"><h2>Bocina estilo Vintage para celular</h2></li>
                             <li class="precio_articulo"><h2>$1200</h2></li>
                         </ul>
@@ -133,7 +133,7 @@
             <div class="footer__rodape">
                 <div class="logioto">
                     <h3>AluraGeek</h3>
-                    <img src="../componentes/corazones.png" alt="">
+                    <img src="./componentes/corazones.png" alt="">
                 </div>
                 <p>Desarrollado por Camila Anguiano Magaña</p>
                 <p>Alura Latam 2024</p>
